fix: add vercel rewrites to prevent 404 on refresh and sync production storage policies

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,15 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+# Supabase
+supabase/.temp/
+.supabase/
+*.local
+*.dev.vars
+
+# Vercel
+.vercel/
+
+# Environnement
+.env
+.env.production
