--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@react-google-maps/api": "^2.20.7",
     "@react-pdf/renderer": "^4.3.0",
+    "@sentry/react": "^10.35.0",
+    "@sentry/vite-plugin": "^4.7.0",
     "@supabase/supabase-js": "^2.86.0",
     "@tanstack/react-query": "^5.83.0",
     "@tiptap/extension-link": "^3.13.0",
